	empty() and renamed it to coalesce (removed old coalesce method)
+	added whitelist filter to Hash class that removes all keys that are not
	in the whitelist of keys
+	added uri and url method to router class
+	added default HitCount Behavior to Behaviors that can increase single
	model fields when used (very usefull for increasing view + 1 f.e.)

2009-08-13
+	added Text Helper that replaces URLs and Emails in Text automatically with 
 	links
+	added Security Component that limits actions to specific HTTP Methods
+	dramatically decreased memory and compile time usage in model class that
	makes everything up to 50% faster

2009-08-12
+	fixed missing created update field when inserting new model entries with
	multiple behaviors
+	added theming, which includes js/css search in theme directory
+	fixed js packer to append line-feed at end of packed js files
+	added after[Action] and before[Action] callbacks in the controller
+	added subversion keywords and new formatted copyright message on every
	file
+	SGMLAttributes don’t render attributes with empty values anymore
+	DBDSN in db.php can be an array, enabling socket connections with it
+	missing afterAction callback for controller added (called after
	components)
+	empty cookie values return false now
+	fixed object->__mergeParentProperty to merge correctly using ->{$varname}
+	File->basename(true) will return with extension and false without 
	extension
+	Dir->newFile can create new Files on the fly
+	CSS/JS Packer use Dir class to create Packed files now
+	added default view for missingtable error message
+	form->configure uses varchar length from model fields as maxLength for 
	input fields
+	renamed Set class to IndexedArray!!!
+	fixed issue with String::substr() on php 5.2.6
+	imageconvolution added if missing in ImageSharpenFilter (needs high 
	performance!)
+	image uses imageantialias only if function exists
+	replaced %1% placeholders to :[name] in string::substitute